# valdaro

./: README.md  flake.nix  lib.nix  lint.nix
frontend/: boot.js  bundle.nix  bundler.nix  copy-css-modules.sh  live-reload.js  package.nix  shell.nix
nixos/: postgresql.nix  services.nix
pkgs/: overlay.nix  zephyr.nix
pkgs/haskell/: biscuit-haskell.nix  biscuit-servant.nix  libsodium-bindings.nix  pg-transact.nix  sel.nix  text-builder-linear.nix  text-display.nix
server/: README.md  extra-deps.nix  justfile  valdaro-server.cabal
server/src/: Valdaro.hs
server/src/Valdaro/: CLI.hs  Configuration.hs  SQL.hs  Security.hs  Server.hs  Service.hs
server/src/Valdaro/API/: Login.hs  Session.hs
server/src/Valdaro/CLI/: Options.hs
server/src/Valdaro/SQL/: Configuration.hs  Connectivity.hs  Migrations.hs
server/src/Valdaro/Security/: Biscuit.hs  Configuration.hs  Password.hs
server/src/Valdaro/Server/: Utils.hs
server/test/: Spec.hs
shells/: frontend.nix  tooling.nix
